# pdf-cutter

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml  requirements.txt
src/pdf_cutter/: __init__.py  __main__.py  pdf_cutter.py
