[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-cutter"
dynamic = ["version"]
dependencies = [
  "pdf2image == 1.16.0",
  "img2pdf == 0.4.4"
]
authors = [
  {name = "Raul Gilabert", email = "raulgilabert@proton.me"},
  {name = "Arnau Granados", email = "arnxxau@proton.me"},
  {name = "Nara Diaz", email = "rdvdev2@gmail.com"}
]
description = "PDF file cutter for slides where 2 pages are in one of the file"
readme = "README.md"
license = {file = "LICENSE"}

[project.scripts]
pdf-cutter = "pdf_cutter.pdf_cutter:main"

[tool.setuptools_scm]
